--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -4,3 +4,9 @@ module(
 
 bazel_dep(name = "rules_pkg", version = "1.0.1")
 bazel_dep(name = "aspect_bazel_lib", version = "2.9.0")
+bazel_dep(name = "thirdparty", version = "0.0.0")
+
+local_path_override(
+    module_name = "thirdparty",
+    path = "thirdparty",
+)
