--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,5 +1,6 @@
 load("@bazel_gazelle//:def.bzl", "gazelle")
 load("@rules_pkg//pkg:tar.bzl", "pkg_tar")
+load("@rules_oci//oci:defs.bzl", "oci_image")
 
 gazelle(
     name = "gazelle",
@@ -29,4 +30,10 @@ pkg_tar(
     ],
     strip_prefix = ".",
     visibility = ["//visibility:public"],
+)
+
+oci_image(
+    name = "image",
+    base = "@alpine_linux_amd64",
+    tars = [":all_tools_tar"],
 )
